sinntp (1.4.1) UNRELEASED; urgency=low

  * 

 -- Jakub Wilk <jwilk@jwilk.net>  Wed, 15 Feb 2012 18:52:46 +0100

sinntp (1.4) unstable; urgency=low

  * Use the argparse (rather than optparse) module to parse options.
  * Send a ‘mode reader’ command before authentication. Thanks to Pierre
    Habouzit for the bug report.
  * Allow to specify port number for the -S/--server option.
  * Fall back to our own minimal XDG Base Directory implementation if PyXDG is
    not found.
  * Add some tests.

 -- Jakub Wilk <jwilk@jwilk.net>  Wed, 27 Jul 2011 18:01:51 +0200

sinntp (1.3.2) unstable; urgency=low

  * Fix Python 2.6 deprecation warnings.
    http://bugs.debian.org/585839

 -- Jakub Wilk <jwilk@jwilk.net>  Wed, 23 Jun 2010 23:36:08 +0200

sinntp (1.3.1) unstable; urgency=low

  [ Piotr Lewandowski ]
  * Add missing commas in sinntp manpage.

  [ Jakub Wilk ]
  * Fix typos in the manual pages.
  * Include full copy of the GPL license.

 -- Piotr Lewandowski <piotr.lewandowski@gmail.com>  Wed, 13 Jan 2010 09:34:36 +0100

sinntp (1.3) unstable; urgency=low

  * Follow the XDG Base Directory Specification.
  * Add manual pages.

 -- Piotr Lewandowski <piotr.lewandowski@gmail.com>  Thu, 17 Sep 2009 19:01:09 +0200

sinntp (1.2) unstable; urgency=low

  * Introduce the 'list' command.
  * Fix command name parsing.

 -- Piotr Lewandowski <piotr.lewandowski@gmail.com>  Tue, 18 Aug 2009 18:33:18 +0200

sinntp (1.1.1) unstable; urgency=low

  [ Piotr Lewandowski ]
  * Fix command line arguments parsing.

  [ Jakub Wilk ]
  * Don't use symlinks.

 -- Jakub Wilk <jwilk@jwilk.net>  Sat, 27 Jun 2009 19:09:30 +0200

sinntp (1.1) unstable; urgency=low

  * Add the --quiet option.
  * Add the --timeout option.
  * Handle socket exceptions gracefully.
  * Handle connection NNTP errors gracefully.
  * Allow to provide newsgroup names as arguments for nntp-push.
  * Introduce the 'get' command and provide nntp-get symlink.
